--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,5 +4,6 @@ add_library(Format ChessFormat.cpp)
 add_library(Game ChessGame.cpp)
 add_library(Display DisplayBoard.cpp)
 add_library(BMPImage BMPImage.cpp)
+add_library(Manager FileManager.cpp)
 
 target_link_libraries(History PRIVATE nlohmann_json::nlohmann_json)
