--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,9 +12,14 @@ target_link_libraries(${PROJECT_NAME} PRIVATE argparser)
 target_link_libraries(${PROJECT_NAME} PRIVATE string_argument_class)
 target_link_libraries(${PROJECT_NAME} PRIVATE int_argument_class)
 target_link_libraries(${PROJECT_NAME} PRIVATE flag_class)
+target_link_libraries(${PROJECT_NAME} PRIVATE Manager)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
 
+#include_directories(${SQLite3_INCLUDE_DIRS})
+
+#target_link_libraries(${PROJECT_NAME} PRIVATE SQLite::SQLite3)
 
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
+
